<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ImageView
            android:id="@+id/image_view_sun"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_sun"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cityWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cityString"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingStart="15dp"
            app:layout_constraintStart_toEndOf="@+id/image_view_sun"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cityTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempString"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="18sp"
            android:paddingStart="15dp"
            app:layout_constraintStart_toEndOf="@+id/image_view_sun"
            app:layout_constraintTop_toBottomOf="@+id/cityWeather" />

        <TextView
            android:id="@+id/weatherCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/conditionString"
            android:textColor="@color/weatherCondition_color"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.444" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>